# spectrum-2

./: .gitignore  PROJECT_NOTES.md  README.md  mejoropc.ini
FirstEdition/spectrum-main/: .gitignore  APO_RUNTIME_ARCHITECTURE.md  CONTROL_BRIDGE_SPEC.md  README.md  build.ps1
FirstEdition/spectrum-main/apo/: WarzoneApo.inf.template  (+1 more)
apo/: README.md  WarzoneApoDll.def  WarzoneApoSkeleton.h
app/: email.md  main.cjs  pack_profiles.ps1  package-lock.json  package.json  preload.cjs  repack_profiles.cjs  vite.config.ts  welcome-email.html
app/Echo_radar/: Cargo.toml  cargo-llvm.ps1  implementation_plan.md  project_execution_plan.md
app/Echo_radar/.agents/rules/: agents.md
app/Echo_radar/scripts/: package-release.ps1
app/Echo_radar/src/: Untitled-1.txt  analysis.rs  audio.rs  eq_control.rs  main.rs  overlay.rs
app/instalacion/: apply_echoplus_now.ps1  build-nsis-setup.ps1  enable_loudness.ps1  install_echosuite.ps1  install_equalizerapo.ps1  install_hificable.ps1  reencrypt-bundle.ps1  set_hifi_device_selector.ps1
app/pending-presets/: mio10.json  mio5.json  mio6.json  mio7.json  mio8.json  mio9.json
app/src/: App.tsx  App.tsx.bak  index.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/native/warzone_audio/include/warzone_audio/: CApi.h  Constants.h  DspEngine.h  DspTypes.h  RealtimeEngine.h  SpatialDspEngine.h
app/src-tauri/native/warzone_audio/src/: Biquad.cpp  Biquad.h  CApi.cpp  FeatureExtractor.h  Processor.cpp  Processor.h  RealtimeCApi.cpp  RealtimeEngine.cpp  SelfWeaponSuppressor.cpp  SelfWeaponSuppressor.h  SpatialDspEngine.cpp  SpatialTypes.h  TransientDetector.cpp  TransientDetector.h
app/src-tauri/src/: audio_output.rs  commands.rs  dsp_core.rs  elevation.rs  embedded_scripts.rs  install.rs  integrity.rs  lib.rs  logging.rs  main.rs  mini_radar.rs  models.rs  native_control.rs  overlay.rs  radar.rs  single_instance.rs
include/warzone_audio/: ControlProtocol.h
(+96 files in other folders)
