[package]
name = "echo-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
wasapi = "0.23"
crossbeam-channel = "0.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = 3
lto = true
strip = true
